# ai-impact-control-panel

./: .dockerignore  .gitignore  DOCKER_README.md  Makefile  NOTICE  README.md  README.rst  backend.Dockerfile  buildmodel.py  cloudbuild.yaml  docker-compose-prod.yml  docker-compose.yml  example.sim  example.toml  fraud.toml  frontend.Dockerfile  gendata.py  pyproject.toml  randomforest1.model  run_from_vm.sh  setup.cfg  source_on_vm.sh
.github/workflows/: main.yml
data/: README.md  fraud_test.csv
deva/: __init__.py  bounds.py  compareBase.py  compareEliciters.py  config.py  datasim.py  db.py  elicit.py  fileio.py  halfspace.py  inputgen.py  interface.py  logger.py  model.py  niceRange.py  nice_range.py  pareto.py  references.py  score.py  vis.py
deva/scripts/: __init__.py  dash.py  demo.py  gen.py  sim.py  text.py
docs/: conf.py  index.rst
docs/api/: api.rst  bounds.rst  config.rst  datasim.rst  elicit.rst  fileio.rst  halfspace.rst  model.rst  pareto.rst  references.rst  score.rst  scripts.rst
docs/report/: context.rst  intro.rst  majorcomponents.rst  manual.rst
docs/scenarios/: fraud.rst  jobs.rst
docs/server/: app.rst  client.rst  server.rst
experiments/: enautilus_2d.py  export_model.ipynb
nginx/: default.conf
python_client/: bounds_client.py  bounds_local.py  eliciter_client.py  nl_bounds.py  plot3d.py  scrollbars.ipynb
research/: AHP.py  console_demo.py  sampling_experiment.py  scrollbars.ipynb
scenarios/: README.md
scenarios/example/: metadata.toml  model.toml  sim.toml
scenarios/fraud/: baseline.toml  metadata.toml  model.toml
scenarios/group_fair/: metadata.toml  model.toml  sim.toml
scenarios/jobs/: baseline.toml  metadata.toml
scenarios/pareto/: metadata.toml  model.toml
scenarios/simple/: metadata.toml
scenarios/simple_fraud/: baseline.toml  metadata.toml  model.toml
scenarios/synthetic/: baseline.toml  metadata.toml
server/: README.md
server/deva-ts/: HOOKS.md  README.md  STATE.md  package-lock.json  package.json  tailwind.config.js
server/deva-ts/public/: index.html
server/mlserver/: app.py  client.py  dev.cfg  gen_key.sh  log.toml  prod.cfg  run_dev.sh  run_prod.sh  util.py
tests/: __init__.py  conftest.py  test_client.py  test_deva.py  test_deva_gen.py  test_flaskr.py  test_halfspace.py  test_model.py  test_nicerange.py  test_pareto.py  test_references.py  test_score.py
tests/results/: README.md
tests/tmp/: README.md
(+386 files in other folders)
