[tool.poetry]
name = "deva"
version = "0.1.0"
description = ""
authors = ["Lachlan McCalman <lachlan@gradientinstitute.org>"]

[tool.poetry.dependencies]
python = "3.9.*"
click = "^8.0.1"
matplotlib = "^3.4.2"
numpy = "^1.21.1"
scipy = "^1.7.1"
PyQt5 = "^5.15.4"
toml = "^0.10.2"
namedtupled = "^0.3.3"
pandas = "^1.3.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
deva-dash = "deva.scripts.dash:cli"
deva-gen = "deva.scripts.gen:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
