[tool.poetry]
name = "deva"
version = "0.1.0"
description = ""
authors = ["Lachlan McCalman <lachlan@gradientinstitute.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^8.0.1"
matplotlib = "^3.4.2"
numpy = "^1.21.1"
scipy = "^1.7.1"
toml = "^0.10.2"
namedtupled = "^0.3.3"
pandas = "^1.3.1"
sklearn = "^0.0"
Flask = "^2.0.1"
requests = "^2.26.0"
redis = "^3.5.3"
gunicorn = "^20.1.0"
fpdf = "^1.7.2"

[tool.poetry.dev-dependencies]
sphinx = "^4.2.0"
pytest = "^5.2"
flake8 = "^3.9.2"
ipython = "^7.26.0"
pylint = "^2.12.2"

[tool.poetry.scripts]
deva-demo = "deva.scripts.demo:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
